--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "start": "next start"
   },
   "dependencies": {
-    "@mdx-js/loader": "^1.5.1",
+    "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.18",
-    "@next/mdx": "^9.1.1",
-    "autoprefixer": "^10.1.0",
-    "next": "latest",
-    "postcss": "^8.2.2",
+    "@next/mdx": "^9.5.5",
+    "@tailwindcss/typography": "^0.3.1",
+    "autoprefixer": "^10.2.1",
+    "date-fns": "^2.16.1",
+    "gray-matter": "^4.0.2",
+    "next": "^10.0.5",
+    "next-mdx-remote": "^2.1.1",
+    "next-seo": "^4.17.0",
+    "next-themes": "0.0.10",
+    "postcss": "^8.2.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "tailwindcss": "^2.0.2"
