--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.18",
     "@next/mdx": "^9.5.5",
+    "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^10.2.1",
     "date-fns": "^2.16.1",
